# rustracing_jaeger

./: Cargo.toml  README.md
examples/: http_hello_server.rs  report.rs
src/: lib.rs  reporter.rs  span.rs  tracer.rs
src/thrift/: jaeger.rs
