[package]
name = "cf-rustracing-jaeger"
version = "1.2.1"
authors = ["Takeru Ohta <phjgt308@gmail.com>", "Cloudflare Inc."]
description = "Jaeger client library created on top of rustracing"
homepage = "https://github.com/cloudflare/rustracing_jaeger"
repository = "https://github.com/cloudflare/rustracing_jaeger"
readme = "README.md"
keywords = ["opentracing", "jaeger"]
license = "MIT"
edition = "2021"

[badges]
coveralls = {repository = "sile/rustracing"}

[dependencies]
hostname = "0.3.0"
percent-encoding = "2.1.0"
rand = "0.8.3"
cf-rustracing = "1"
thrift_codec = "0.2"
trackable = "1"
tokio = { version = "1", features = ["net"] }

[target.'cfg(not(target_os="android"))'.dependencies]
local-ip-address = "0.5.1"

[dev-dependencies]
bytecodec = "0.4"
fibers_global = "0.1"
fibers_http_server = "0.2"
futures = "0.1"
httpcodec = "0.2"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread"] }
